fix alignment issue in sub header

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ ul {
 .sub-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: var(--dark);
   padding: 150px 300px;
 }
